// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal Modal onVote enables voting if the proposal is on the 'VotingPeriod' 1`] = `
<tmpage-stub hideheader="true" title="" subtitle="" data-title="Proposal" class="small">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status votingperiod">
          Voting Period
        </span>
      <h2 class="proposal-title">test</h2>
      <p class="proposer">
        Proposed by
        <bech32-stub address=""></bech32-stub>
      </p>
    </div>
    <div class="button-container">
      <tmbtn-stub value="Deposit" disabled="true" id="deposit-btn" color="primary"></tmbtn-stub>
      <tmbtn-stub value="Vote" id="vote-btn" color="primary"></tmbtn-stub>
    </div>
  </div>
  <textblock-stub content="test"></textblock-stub>
  <!---->
  <ul class="row">
    <li>
      <h4>Total Vote Count</h4> <span>
          0.00% /
          0
        </span>
    </li>
    <li>
      <h4>Yes</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span>33</span>
    </li>
    <li>
      <h4>Submitted</h4> <span>August 23rd 2019, 08:46</span>
    </li>
    <li>
      <h4>Voting Period Start Date</h4> <span>January 1st 1970, 00:00</span>
    </li>
    <li>
      <h4>Voting Period End Date</h4> <span>
            January 1st 1970, 00:00 /
            a few seconds ago
          </span>
    </li>
  </ul>
  <modaldeposit-stub proposalid="2" proposaltitle="test" denom="TESTCOIN"></modaldeposit-stub>
  <modalvote-stub proposalid="2" proposaltitle="test"></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal Modal onVote shows the last valid vote 1`] = `
<tmpage-stub hideheader="true" title="" subtitle="" data-title="Proposal" class="small">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status rejected">
          Rejected
        </span>
      <h2 class="proposal-title">test</h2>
      <p class="proposer">
        Proposed by
        <bech32-stub address=""></bech32-stub>
      </p>
    </div>
    <div class="button-container">
      <tmbtn-stub value="Deposit" disabled="true" id="deposit-btn" color="primary"></tmbtn-stub>
      <tmbtn-stub value="Vote" disabled="true" id="vote-btn" color="primary"></tmbtn-stub>
    </div>
  </div>
  <textblock-stub content="test"></textblock-stub>
  <!---->
  <ul class="row">
    <!---->
    <li>
      <h4>Yes</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span>33</span>
    </li>
    <li>
      <h4>Submitted</h4> <span>August 23rd 2019, 08:46</span>
    </li>
    <li>
      <h4>Proposal Finalized (Rejected)</h4> <span>January 1st 1970, 00:00</span>
    </li>
  </ul>
  <modaldeposit-stub proposalid="2" proposaltitle="test" denom="TESTCOIN"></modaldeposit-stub>
  <modalvote-stub proposalid="2" proposaltitle="test" lastvoteoption="Yes"></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal should show a loader if the necessary data hasen't been loaded 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataloading-stub
    title="Data is loading…"
  />
</tmpage-stub>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataerror-stub />
</tmpage-stub>
`;
